cmake_minimum_required(VERSION 3.12)
project(CS2275_Project_1)

set(CMAKE_CXX_STANDARD 17)

add_executable(CS2275_Project_1_problem_1 problem1LeapYears.cpp inputHelper.cpp)
add_executable(CS2275_Project_1_problem_2 problem2RightTriangle.cpp inputHelper.cpp)
add_executable(CS2275_Project_1_problem_3 problem3SumNumbers.cpp inputHelper.cpp)